// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NamespaceTreeView /> collapses item by clicking minus button 1`] = `
<body>
  <div>
    <div
      class="TreeView"
      data-testid="namespace-tree-view"
    >
      <div
        class="DrawerTitle title"
      >
        Tree View
      </div>
      <ul
        aria-activedescendant="mui-8-level-deep-child-b"
        aria-multiselectable="false"
        class="MuiTreeView-root css-161j9ok-MuiTreeView-root"
        id="mui-8"
        role="tree"
        tabindex="0"
      >
        <li
          aria-expanded="true"
          class="MuiTreeItem-root css-1wdvgx2-MuiTreeItem-root"
          data-testid="namespace-levels-deep"
          id="mui-8-levels-deep"
          role="treeitem"
          tabindex="-1"
        >
          <div
            class="css-1bcfi89-MuiTreeItem-content MuiTreeItem-content Mui-expanded"
          >
            <div
              class="MuiTreeItem-iconContainer"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="minus-square"
                focusable="false"
                style="width: 14px; height: 14px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                />
              </svg>
            </div>
            <div
              class="MuiTreeItem-label label"
            >
              <div
                class="MuiBox-root css-0"
              >
                levels-deep
                 
              </div>
            </div>
          </div>
          <ul
            class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-group group MuiCollapse-entered css-g0jugy-MuiCollapse-root-MuiTreeItem-group"
            role="group"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <li
                  class="MuiTreeItem-root css-1wdvgx2-MuiTreeItem-root"
                  data-testid="namespace-level-deep-child-a"
                  id="mui-8-level-deep-child-a"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="css-1bcfi89-MuiTreeItem-content MuiTreeItem-content Mui-expanded"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <div
                        style="opacity: 0.3;"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="minus-square"
                          focusable="false"
                          style="width: 14px; height: 14px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="MuiTreeItem-label label"
                    >
                      <div
                        class="MuiBox-root css-0"
                      >
                        level-deep-child-a
                         
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  aria-expanded="true"
                  aria-selected="true"
                  class="MuiTreeItem-root css-1wdvgx2-MuiTreeItem-root"
                  data-testid="namespace-level-deep-child-b"
                  id="mui-8-level-deep-child-b"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="css-1bcfi89-MuiTreeItem-content MuiTreeItem-content Mui-expanded Mui-selected Mui-focused"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="minus-square"
                        focusable="false"
                        style="width: 14px; height: 14px;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiTreeItem-label label"
                    >
                      <div
                        class="MuiBox-root css-0"
                      >
                        level-deep-child-b
                         
                      </div>
                    </div>
                  </div>
                  <ul
                    class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-group group MuiCollapse-entered css-g0jugy-MuiCollapse-root-MuiTreeItem-group"
                    role="group"
                    style="min-height: 0px;"
                  >
                    <div
                      class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                    >
                      <div
                        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                      >
                        <li
                          class="MuiTreeItem-root css-1wdvgx2-MuiTreeItem-root"
                          data-testid="namespace-level-deep-subchild-a"
                          id="mui-8-level-deep-subchild-a"
                          role="treeitem"
                          tabindex="-1"
                        >
                          <div
                            class="css-1bcfi89-MuiTreeItem-content MuiTreeItem-content Mui-expanded"
                          >
                            <div
                              class="MuiTreeItem-iconContainer"
                            >
                              <div
                                style="opacity: 0.3;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                  data-testid="minus-square"
                                  focusable="false"
                                  style="width: 14px; height: 14px;"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                                  />
                                </svg>
                              </div>
                            </div>
                            <div
                              class="MuiTreeItem-label label"
                            >
                              <div
                                class="MuiBox-root css-0"
                              >
                                level-deep-subchild-a
                                 
                              </div>
                            </div>
                          </div>
                        </li>
                      </div>
                    </div>
                  </ul>
                </li>
              </div>
            </div>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</body>
`;

exports[`<NamespaceTreeView /> expands item by clicking plus button 1`] = `
<body>
  <div>
    <div
      class="TreeView"
      data-testid="namespace-tree-view"
    >
      <div
        class="DrawerTitle title"
      >
        Tree View
      </div>
      <ul
        aria-activedescendant="mui-9-level-deep-child-b"
        aria-multiselectable="false"
        class="MuiTreeView-root css-161j9ok-MuiTreeView-root"
        id="mui-9"
        role="tree"
        tabindex="0"
      >
        <li
          aria-expanded="true"
          class="MuiTreeItem-root css-1wdvgx2-MuiTreeItem-root"
          data-testid="namespace-levels-deep"
          id="mui-9-levels-deep"
          role="treeitem"
          tabindex="-1"
        >
          <div
            class="css-1bcfi89-MuiTreeItem-content MuiTreeItem-content Mui-expanded"
          >
            <div
              class="MuiTreeItem-iconContainer"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="minus-square"
                focusable="false"
                style="width: 14px; height: 14px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                />
              </svg>
            </div>
            <div
              class="MuiTreeItem-label label"
            >
              <div
                class="MuiBox-root css-0"
              >
                levels-deep
                 
              </div>
            </div>
          </div>
          <ul
            class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-group group MuiCollapse-entered css-g0jugy-MuiCollapse-root-MuiTreeItem-group"
            role="group"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <li
                  class="MuiTreeItem-root css-1wdvgx2-MuiTreeItem-root"
                  data-testid="namespace-level-deep-child-a"
                  id="mui-9-level-deep-child-a"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="css-1bcfi89-MuiTreeItem-content MuiTreeItem-content Mui-expanded"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <div
                        style="opacity: 0.3;"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="minus-square"
                          focusable="false"
                          style="width: 14px; height: 14px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="MuiTreeItem-label label"
                    >
                      <div
                        class="MuiBox-root css-0"
                      >
                        level-deep-child-a
                         
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  aria-expanded="true"
                  aria-selected="true"
                  class="MuiTreeItem-root css-1wdvgx2-MuiTreeItem-root"
                  data-testid="namespace-level-deep-child-b"
                  id="mui-9-level-deep-child-b"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="css-1bcfi89-MuiTreeItem-content MuiTreeItem-content Mui-expanded Mui-selected Mui-focused"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="minus-square"
                        focusable="false"
                        style="width: 14px; height: 14px;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiTreeItem-label label"
                    >
                      <div
                        class="MuiBox-root css-0"
                      >
                        level-deep-child-b
                         
                      </div>
                    </div>
                  </div>
                  <ul
                    class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-group group MuiCollapse-entered css-g0jugy-MuiCollapse-root-MuiTreeItem-group"
                    role="group"
                    style="min-height: 0px;"
                  >
                    <div
                      class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                    >
                      <div
                        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                      >
                        <li
                          class="MuiTreeItem-root css-1wdvgx2-MuiTreeItem-root"
                          data-testid="namespace-level-deep-subchild-a"
                          id="mui-9-level-deep-subchild-a"
                          role="treeitem"
                          tabindex="-1"
                        >
                          <div
                            class="css-1bcfi89-MuiTreeItem-content MuiTreeItem-content Mui-expanded"
                          >
                            <div
                              class="MuiTreeItem-iconContainer"
                            >
                              <div
                                style="opacity: 0.3;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                  data-testid="minus-square"
                                  focusable="false"
                                  style="width: 14px; height: 14px;"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                                  />
                                </svg>
                              </div>
                            </div>
                            <div
                              class="MuiTreeItem-label label"
                            >
                              <div
                                class="MuiBox-root css-0"
                              >
                                level-deep-subchild-a
                                 
                              </div>
                            </div>
                          </div>
                        </li>
                      </div>
                    </div>
                  </ul>
                </li>
              </div>
            </div>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</body>
`;

exports[`<NamespaceTreeView /> renders 2 levels deep 1`] = `
<body>
  <div>
    <div
      class="TreeView"
      data-testid="namespace-tree-view"
    >
      <div
        class="DrawerTitle title"
      >
        Tree View
      </div>
      <ul
        aria-multiselectable="false"
        class="MuiTreeView-root css-161j9ok-MuiTreeView-root"
        id="mui-6"
        role="tree"
        tabindex="0"
      >
        <li
          aria-expanded="true"
          class="MuiTreeItem-root css-1wdvgx2-MuiTreeItem-root"
          data-testid="namespace-levels-deep"
          id="mui-6-levels-deep"
          role="treeitem"
          tabindex="-1"
        >
          <div
            class="css-1bcfi89-MuiTreeItem-content MuiTreeItem-content Mui-expanded"
          >
            <div
              class="MuiTreeItem-iconContainer"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="minus-square"
                focusable="false"
                style="width: 14px; height: 14px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                />
              </svg>
            </div>
            <div
              class="MuiTreeItem-label label"
            >
              <div
                class="MuiBox-root css-0"
              >
                levels-deep
                 
              </div>
            </div>
          </div>
          <ul
            class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-group group MuiCollapse-entered css-g0jugy-MuiCollapse-root-MuiTreeItem-group"
            role="group"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <li
                  class="MuiTreeItem-root css-1wdvgx2-MuiTreeItem-root"
                  data-testid="namespace-level-deep-child-a"
                  id="mui-6-level-deep-child-a"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="css-1bcfi89-MuiTreeItem-content MuiTreeItem-content Mui-expanded"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <div
                        style="opacity: 0.3;"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="minus-square"
                          focusable="false"
                          style="width: 14px; height: 14px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="MuiTreeItem-label label"
                    >
                      <div
                        class="MuiBox-root css-0"
                      >
                        level-deep-child-a
                         
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  aria-expanded="true"
                  class="MuiTreeItem-root css-1wdvgx2-MuiTreeItem-root"
                  data-testid="namespace-level-deep-child-b"
                  id="mui-6-level-deep-child-b"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="css-1bcfi89-MuiTreeItem-content MuiTreeItem-content Mui-expanded"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="minus-square"
                        focusable="false"
                        style="width: 14px; height: 14px;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiTreeItem-label label"
                    >
                      <div
                        class="MuiBox-root css-0"
                      >
                        level-deep-child-b
                         
                      </div>
                    </div>
                  </div>
                  <ul
                    class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-group group MuiCollapse-entered css-g0jugy-MuiCollapse-root-MuiTreeItem-group"
                    role="group"
                    style="min-height: 0px;"
                  >
                    <div
                      class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                    >
                      <div
                        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                      >
                        <li
                          class="MuiTreeItem-root css-1wdvgx2-MuiTreeItem-root"
                          data-testid="namespace-level-deep-subchild-a"
                          id="mui-6-level-deep-subchild-a"
                          role="treeitem"
                          tabindex="-1"
                        >
                          <div
                            class="css-1bcfi89-MuiTreeItem-content MuiTreeItem-content Mui-expanded"
                          >
                            <div
                              class="MuiTreeItem-iconContainer"
                            >
                              <div
                                style="opacity: 0.3;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                  data-testid="minus-square"
                                  focusable="false"
                                  style="width: 14px; height: 14px;"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                                  />
                                </svg>
                              </div>
                            </div>
                            <div
                              class="MuiTreeItem-label label"
                            >
                              <div
                                class="MuiBox-root css-0"
                              >
                                level-deep-subchild-a
                                 
                              </div>
                            </div>
                          </div>
                        </li>
                      </div>
                    </div>
                  </ul>
                </li>
              </div>
            </div>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</body>
`;

exports[`<NamespaceTreeView /> renders namespace with 2 children namespaces 1`] = `
<body>
  <div>
    <div
      class="TreeView"
      data-testid="namespace-tree-view"
    >
      <div
        class="DrawerTitle title"
      >
        Tree View
      </div>
      <ul
        aria-multiselectable="false"
        class="MuiTreeView-root css-161j9ok-MuiTreeView-root"
        id="mui-2"
        role="tree"
        tabindex="0"
      >
        <li
          aria-expanded="true"
          class="MuiTreeItem-root css-1wdvgx2-MuiTreeItem-root"
          data-testid="namespace-acme-org"
          id="mui-2-acme-org"
          role="treeitem"
          tabindex="-1"
        >
          <div
            class="css-1bcfi89-MuiTreeItem-content MuiTreeItem-content Mui-expanded"
          >
            <div
              class="MuiTreeItem-iconContainer"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="minus-square"
                focusable="false"
                style="width: 14px; height: 14px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                />
              </svg>
            </div>
            <div
              class="MuiTreeItem-label label"
            >
              <div
                class="MuiBox-root css-0"
              >
                acme-org
                 
              </div>
            </div>
          </div>
          <ul
            class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-group group MuiCollapse-entered css-g0jugy-MuiCollapse-root-MuiTreeItem-group"
            role="group"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <li
                  class="MuiTreeItem-root css-1wdvgx2-MuiTreeItem-root"
                  data-testid="namespace-team-a"
                  id="mui-2-team-a"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="css-1bcfi89-MuiTreeItem-content MuiTreeItem-content Mui-expanded"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <div
                        style="opacity: 0.3;"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="minus-square"
                          focusable="false"
                          style="width: 14px; height: 14px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="MuiTreeItem-label label"
                    >
                      <div
                        class="MuiBox-root css-0"
                      >
                        team-a
                         
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="MuiTreeItem-root css-1wdvgx2-MuiTreeItem-root"
                  data-testid="namespace-team-b"
                  id="mui-2-team-b"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="css-1bcfi89-MuiTreeItem-content MuiTreeItem-content Mui-expanded"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <div
                        style="opacity: 0.3;"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="minus-square"
                          focusable="false"
                          style="width: 14px; height: 14px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="MuiTreeItem-label label"
                    >
                      <div
                        class="MuiBox-root css-0"
                      >
                        team-b
                         
                      </div>
                    </div>
                  </div>
                </li>
              </div>
            </div>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</body>
`;

exports[`<NamespaceTreeView /> renders namespace with children namespaces and a subnamespace 1`] = `
<body>
  <div>
    <div
      class="TreeView"
      data-testid="namespace-tree-view"
    >
      <div
        class="DrawerTitle title"
      >
        Tree View
      </div>
      <ul
        aria-multiselectable="false"
        class="MuiTreeView-root css-161j9ok-MuiTreeView-root"
        id="mui-3"
        role="tree"
        tabindex="0"
      >
        <li
          aria-expanded="true"
          class="MuiTreeItem-root css-1wdvgx2-MuiTreeItem-root"
          data-testid="namespace-org-a"
          id="mui-3-org-a"
          role="treeitem"
          tabindex="-1"
        >
          <div
            class="css-1bcfi89-MuiTreeItem-content MuiTreeItem-content Mui-expanded"
          >
            <div
              class="MuiTreeItem-iconContainer"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="minus-square"
                focusable="false"
                style="width: 14px; height: 14px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                />
              </svg>
            </div>
            <div
              class="MuiTreeItem-label label"
            >
              <div
                class="MuiBox-root css-0"
              >
                org-a
                 
              </div>
            </div>
          </div>
          <ul
            class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-group group MuiCollapse-entered css-g0jugy-MuiCollapse-root-MuiTreeItem-group"
            role="group"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <li
                  class="MuiTreeItem-root css-1wdvgx2-MuiTreeItem-root"
                  data-testid="namespace-team-c"
                  id="mui-3-team-c"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="css-1bcfi89-MuiTreeItem-content MuiTreeItem-content Mui-expanded"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <div
                        style="opacity: 0.3;"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="minus-square"
                          focusable="false"
                          style="width: 14px; height: 14px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="MuiTreeItem-label label"
                    >
                      <div
                        class="MuiBox-root css-0"
                      >
                        team-c
                         
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="MuiTreeItem-root css-1wdvgx2-MuiTreeItem-root"
                  data-testid="namespace-service-1"
                  id="mui-3-service-1"
                  role="treeitem"
                  tabindex="-1"
                >
                  <div
                    class="css-1bcfi89-MuiTreeItem-content MuiTreeItem-content Mui-expanded"
                  >
                    <div
                      class="MuiTreeItem-iconContainer"
                    >
                      <div
                        style="opacity: 0.3;"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="minus-square"
                          focusable="false"
                          style="width: 14px; height: 14px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="MuiTreeItem-label label"
                    >
                      <div
                        class="MuiBox-root css-0"
                      >
                        service-1
                         
                        <span
                          class="subnamespaceBadge"
                          data-testid="namespace-details-badge-for-service-1"
                          id="namespace-details-badge-for-service-1"
                        >
                          S
                        </span>
                      </div>
                    </div>
                  </div>
                </li>
              </div>
            </div>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</body>
`;

exports[`<NamespaceTreeView /> renders one namespace without children 1`] = `
<body>
  <div>
    <div
      class="TreeView"
      data-testid="namespace-tree-view"
    >
      <div
        class="DrawerTitle title"
      >
        Tree View
      </div>
      <ul
        aria-multiselectable="false"
        class="MuiTreeView-root css-161j9ok-MuiTreeView-root"
        id="mui-1"
        role="tree"
        tabindex="0"
      >
        <li
          class="MuiTreeItem-root css-1wdvgx2-MuiTreeItem-root"
          data-testid="namespace-single-root"
          id="mui-1-single-root"
          role="treeitem"
          tabindex="-1"
        >
          <div
            class="css-1bcfi89-MuiTreeItem-content MuiTreeItem-content"
          >
            <div
              class="MuiTreeItem-iconContainer"
            >
              <div
                style="opacity: 0.3;"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="minus-square"
                  focusable="false"
                  style="width: 14px; height: 14px;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M22.047 22.074v0 0-20.147 0h-20.12v0 20.147 0h20.12zM22.047 24h-20.12q-.803 0-1.365-.562t-.562-1.365v-20.147q0-.776.562-1.351t1.365-.575h20.147q.776 0 1.351.575t.575 1.351v20.147q0 .803-.575 1.365t-1.378.562v0zM17.873 11.023h-11.826q-.375 0-.669.281t-.294.682v0q0 .401.294 .682t.669.281h11.826q.375 0 .669-.281t.294-.682v0q0-.401-.294-.682t-.669-.281z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="MuiTreeItem-label label"
            >
              <div
                class="MuiBox-root css-0"
              >
                single-root
                 
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</body>
`;
